--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 <table border="1">
+	 <thead>
 	<tr >
 		<th>Part</th>
 		<th>XS</th>
@@ -17,6 +18,7 @@
 		<th>L</th>
 		<th>XL</th>	
 	</tr>
+	 </thead>
 	<tbody>
 		<tr>
 		<td>Waist</td>
@@ -27,8 +29,7 @@
 		<td>32</td>
 			
 			</tr>
-	</tbody>
-	<tbody>
+	
 		<tr>
 		<td>Chest</td>
 		<td>34</td>
@@ -38,8 +39,7 @@
 		<td>41</td>
 			
 			</tr>
-	</tbody>
-	<tbody>
+	
 		<tr>
 		<td>Sleeve</td>
 		<td>23</td>
